# nurexia

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  __setup.py.deleted  install.sh  main.py  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tsconfig.json
docs/: DEVELOPMENT.md  TESTING.md  USAGE.md  tasks.md  test_rules.md  usage.md
docs/api/blessed/: README.md
docs/api/blessed-contrib/: README.md
docs/api/blessed-contrib/layouts/: README.md  carousel.md  grid.md
docs/api/blessed-contrib/utils/: README.md  server-utils.md  utils.md
docs/api/blessed-contrib/widgets/: README.md  canvas.md  donut.md  gauge-list.md  gauge.md  lcd.md  log.md  map.md  markdown.md  picture.md  sparkline.md  table.md  tree.md
docs/api/blessed/core/: node.md  program.md  screen.md
docs/api/blessed/utils/: README.md  cleantags.md  escape.md  generatetags.md  parsetags.md  striptags.md
docs/nurexia/: architecture.md  implementation_guide.md  project_specification.md
docs/prompts/: 01.prompt
nurexia/: __init__.py  cli.py  config.py
nurexia/core/: __init__.py  agent_interface.py  utils.py
nurexia/graph/: __init__.py  state.py  workflow.py
nurexia/plugins/: __init__.py  example.py
nurexia/providers/: __init__.py  anthropic.py  base.py  google.py  huggingface.py  ollama.py  openai.py
nurexia/utils/: __init__.py  formatter.py  streaming.py
src/: index.ts
src.backup/cli/: cli.ts
src.backup/cli/utils/: screenEvents.ts
src.backup/cli/widgets/: scrollBoxWidget.ts  textareaWidget.ts
src/cli/: cli.ts
src/cli/constants/: layout.ts
src/cli/modals/: systemMonitor.ts
src/cli/panels/: bottomPanel.ts  leftPanel.ts  mainPanel.ts  rightPanel.ts
src/cli/widgets/: textareaWidget.ts  treeWidget.ts
tests/: test_cli.py
(+36 files in other folders)
